# swift-api-remitly

./: .env.example  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 65aed48f204f_add_index_to_country_iso2.py  bef8e9a4593e_create_swift_codes_table.py
app/: main.py
app/api/v1/: swift_codes.py
app/core/: config.py  database.py
app/ingestion/: parse_data.py  seed_data.py  validate_data.py
app/models/: __init__.py  swift_code.py
app/schemas/: swift_code.py
data/: swift_codes.xlsx
tests/: conftest.py
tests/integration/: test_swift_codes.py
tests/unit/: test_parse_data.py  test_validate_data.py
